--- a/app/src/main/res/drawable/round_progress_bar.xml
+++ b/app/src/main/res/drawable/round_progress_bar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<!--<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@android:id/background">
         <shape>
             <corners android:radius="8dp"/>
@@ -16,8 +16,35 @@
         <scale android:scaleWidth="100%">
             <shape>
                 <corners android:radius="8dp"/>
-                <solid android:color="#333"/>
+                <solid android:color="#19A0FB"/>
             </shape>
         </scale>
+    </item>
+</layer-list>-->
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/background">
+        <shape>
+            <corners android:radius="8dip" />
+            <stroke android:width="2dip" android:color="#ddd"/>
+            <solid android:color="#ddd"/>
+        </shape>
+    </item>
+    <item android:id="@android:id/secondaryProgress">
+        <clip>
+            <shape>
+                <corners android:radius="8dip" />
+                <stroke android:width="2dip" android:color="#ddd"/>
+                <solid android:color="#19A0FB"/>
+            </shape>
+        </clip>
+    </item>
+    <item android:id="@android:id/progress">
+        <clip>
+            <shape>
+                <corners android:radius="8dip" />
+                <stroke android:width="2dip" android:color="#ddd"/>
+                <solid android:color="#19A0FB"/>
+            </shape>
+        </clip>
     </item>
 </layer-list>
