--- a/app/src/main/res/layout/fragment_topic_select.xml
+++ b/app/src/main/res/layout/fragment_topic_select.xml
@@ -35,9 +35,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="180dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/image_view_constraint_layout">
         <ImageButton
             android:layout_width="50dp"
             android:layout_height="100dp"
@@ -46,7 +47,9 @@
             app:layout_constraintBottom_toBottomOf="@id/current_practice_ImageView"
             app:layout_constraintRight_toLeftOf="@id/current_practice_ImageView"
             android:layout_marginRight="27dp"
-            android:id="@+id/topic_left_ImageButton"/>
+            android:id="@+id/topic_left_ImageButton"
+            android:src="@drawable/ic_topicselect_imagebutton_left"
+            />
 
         <ImageButton
             android:layout_width="50dp"
@@ -56,7 +59,8 @@
             app:layout_constraintBottom_toBottomOf="@id/current_practice_ImageView"
             app:layout_constraintLeft_toRightOf="@id/current_practice_ImageView"
             android:layout_marginLeft="27dp"
-            android:id="@+id/topic_right_ImageButton"/>
+            android:id="@+id/topic_right_ImageButton"
+            android:src="@drawable/ic_topicselect_imagebutton_right"/>
 
         <ImageView
             android:contentDescription="Left ImageView"
@@ -89,6 +93,35 @@
             app:layout_constraintRight_toRightOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@id/image_view_constraint_layout">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="300dp"
+            android:layout_height="20dp"
+            android:progress="30"
+            android:progressDrawable="@drawable/round_progress_bar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progress_text"
+            android:textColor="#000"
+            android:text="18% Mastered"
+            app:layout_constraintTop_toTopOf="@id/progressBar"
+            app:layout_constraintBottom_toBottomOf="@id/progressBar"
+            app:layout_constraintRight_toRightOf="@id/progressBar"
+            android:layout_marginRight="20dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/practice_start_button"
