--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,16 +56,16 @@
         android:textColor="#19A0FB"
         android:textSize="26sp"
         app:fontFamily="@font/karla"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/setupProgressBar"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.13999999" />
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/setupFragmentFrameLayout"
         android:layout_width="wrap_content"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
@@ -73,13 +73,7 @@
         app:layout_constraintBottom_toTopOf="@+id/setupGradeNextBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/setupProgressBar">
-
-        <fragment
-            android:id="@+id/fragment4"
-            android:name="com.example.innovatorsetup.SetupActivitySelectFragment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/setupProgressBar"
+        app:layout_constraintVertical_bias="0.61" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
