--- a/app/src/main/res/layout/fragment_setup_activity_select.xml
+++ b/app/src/main/res/layout/fragment_setup_activity_select.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetupActivitySelectFragment" >
+    tools:context="com.example.solve.SetupActivitySelectFragment" >
 
     <Button
         android:id="@+id/activitySelectDownBtn"
