--- a/app/src/main/res/layout/topic_select_fragment.xml
+++ b/app/src/main/res/layout/topic_select_fragment.xml
@@ -19,17 +19,17 @@
         <!--app:fontFamily="@font/Karla-Regular"-->
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="Rounding Numbers"
-        android:textSize="35sp"
-        android:textColor="#000"
-        app:layout_constraintBottom_toTopOf="@id/practice_start_button"
-        android:layout_marginBottom="15dp"
-        android:textAlignment="center"
-        android:id="@+id/practice_title"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:text="Rounding Numbers"
+            android:textSize="35sp"
+            android:textColor="#000"
+            app:layout_constraintBottom_toTopOf="@+id/practice_start_button"
+            android:layout_marginBottom="15dp"
+            android:textAlignment="center"
+            android:id="@+id/practice_title" app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>
         <!--app:fontFamily="@font/Karla-Regular"-->
 
 
@@ -124,19 +124,19 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/practice_start_button"
-        android:layout_width="250dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="112dp"
-        android:background="#19A0FB"
-        android:text="Practice"
-        android:textAllCaps="false"
-        android:textColor="#ffffff"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+            android:id="@+id/practice_start_button"
+            android:layout_width="250dp"
+            android:layout_height="70dp"
+            android:layout_marginBottom="112dp"
+            android:background="#19A0FB"
+            android:text="Practice"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
         <!--app:fontFamily="@font/Karla-Regular"-->
 
 
