--- a/app/src/main/res/layout/question_activity_main.xml
+++ b/app/src/main/res/layout/question_activity_main.xml
@@ -6,6 +6,25 @@
     android:background="@color/backgroundColor"
     android:orientation="vertical">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/loading_screen"
+            android:background="@color/blue"
+            android:orientation="vertical">
+
+        <TextView
+                fbutton:layout_constraintTop_toTopOf="parent"
+                fbutton:layout_constraintBottom_toBottomOf="parent"
+                fbutton:layout_constraintLeft_toLeftOf="parent"
+                fbutton:layout_constraintRight_toRightOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Loading Questions\n Please Wait..."
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="30sp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
